// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button renders correctly 1`] = `
<body>
  <div>
    <button
      class="button svelte-2bdwip"
    />
  </div>
</body>
`;

exports[`Button renders correctly when disabled 1`] = `
<body>
  <div>
    <button
      class="button svelte-2bdwip"
      disabled=""
    />
  </div>
</body>
`;
